--- a/scss/style.css
+++ b/scss/style.css
@@ -24,13 +24,31 @@ ul {
   margin: 0;
 }
 
+p {
+  margin-bottom: 1.25em;
+}
+
+.intro p {
+  font-size: 1.2em;
+}
+
+a {
+  color: #278da4;
+  text-decoration: none;
+}
+
+a:hover {
+  color: #b13c69;
+}
+
 /* HEADER & FOOTER -------------------------------- */
 header {
-  height: 480px;
+  height: 460px;
   background: -webkit-gradient(linear, left top, left bottom, from(#009fe1), to(#3acec2)), url("../img/bg.jpg") no-repeat;
   background: linear-gradient(#009fe1, #3acec2), url("../img/bg.jpg") no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
+  position: relative;
 }
 
 header h1 {
@@ -46,11 +64,38 @@ header p {
   margin: 0;
 }
 
+header::after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  -webkit-transform: skewY(-2deg);
+          transform: skewY(-2deg);
+  background-color: #eee;
+  top: -25px;
+  background-color: #fff;
+  bottom: -25px;
+}
+
 footer {
   padding: 2em 0 0;
   height: 100px;
   background-color: #eee;
   margin-top: 3.5em;
+  position: relative;
+}
+
+footer::before {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  -webkit-transform: skewY(-2deg);
+          transform: skewY(-2deg);
+  background-color: #eee;
+  top: -25px;
 }
 
 /* CONTAINERS ------------------------------------- */
@@ -68,6 +113,34 @@ footer {
   margin-top: 1em;
 }
 
+.main-nav li {
+  display: inline-block;
+  margin: 0 0.65em;
+}
+
+.main-nav a {
+  color: #fff;
+  font-size: 0.85em;
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 0.5em;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.main-nav a:hover {
+  color: #eeea72;
+}
+
+.img-featured {
+  width: 165px;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  margin-top: 75px;
+  position: relative;
+  z-index: 100;
+}
+
 .card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -82,20 +155,32 @@ footer {
 }
 
 .card h1 {
-  color: #278da4;
   margin: 0.35em 0 0;
   line-height: 1.25;
 }
 
-.btn-info {
+.card .icon,
+.card h1 {
+  color: #278da4;
+}
+
+.btn {
   color: #fff;
   display: inline-block;
-  font-size: 0.85em;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
   padding: 0.75em 1.5em;
   border-radius: 0.35em;
+}
+
+.btn-callout {
+  font-size: 1.1em;
+  background-color: #b13c69;
+}
+
+.btn-info {
+  font-size: 0.85em;
   background-color: #278da4;
   margin-top: auto;
 }
