--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,5 @@
+// VARIABLES ------------------------------------ /
+
 $white: #fff;
 
 $color-primary: #278da4;
@@ -12,6 +14,24 @@ $color-bg-light: #009fe1;
 $font-stack-primary: 'Raleway', sans-serif;
 $font-stack-secondary: 'Bree Serif', serif;
 
+$max-width:1000px;
+
+@mixin skewed {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 50px; 
+  position: absolute;
+  transform: skewY(-2deg);
+  background-color: $color-shade;
+  top: -25px;
+}
+@mixin center {
+  width: 90%;
+  max-width: $max-width;
+  margin: 0 auto;
+  
+}
 /* BASE ------------------------------------------- */
 
 * {
@@ -38,34 +58,57 @@ ul {
   margin: 0;
 }
 
+p {
+  margin-bottom: 1.25em;
+  .intro & {
+    font-size: 1.2em;
+  }
+}
+
+a {
+  color: $color-primary;
+  text-decoration: none;
+  &:hover {
+    color: $color-secondary;  
+  }
+}
+
 /* HEADER & FOOTER -------------------------------- */
 
 header {
-  height: 480px;
-  background: linear-gradient(#009fe1, #3acec2), 
-              url('../img/bg.jpg') no-repeat;
+  height: 460px;
+  background: linear-gradient($color-bg-light, $color-bg), url('../img/bg.jpg') no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
+  position: relative;
+  h1 {
+    color: $white;
+    font-size: 4.8em;
+    margin-bottom: 0;
+    letter-spacing: 1px;
+  }
+  p {
+    color: $color-accent;
+    font-size: 1.25em;
+    margin: 0;
+  }
+  &::after {
+    @include skewed;
+    background-color: $white;
+    bottom: -25px;
+  } 
 }
 
-header h1 {
-  color: $white;
-  font-size: 4.8em;
-  margin-bottom: 0;
-  letter-spacing: 1px;
-}
-
-header p {
-  color: $color-accent;
-  font-size: 1.25em;
-  margin: 0;
-}
 
 footer {
   padding: 2em 0 0;
   height: 100px;
   background-color: $color-shade;
   margin-top: 3.5em;
+  position: relative; 
+  &::before {
+    @include skewed;
+  } 
 }
 
 /* CONTAINERS ------------------------------------- */
@@ -83,6 +126,30 @@ footer {
 
 .main-nav {
   margin-top: 1em;
+  li {
+    display: inline-block;
+    margin: 0 0.65em;
+  }
+  a {
+    color: $white;
+    font-size: 0.85em;
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 0.5em;
+    transition: 0.3s;
+    &:hover {
+      color: $color-accent;  
+    }
+  }
+}
+
+.img-featured {
+  width: 165px;
+  border: 4px solid $white; 
+  border-radius: 50%;
+  margin-top: 75px;
+  position: relative;
+  z-index: 100;
 }
 
 .card {
@@ -91,25 +158,33 @@ footer {
   padding: 1.5em 1em;
   border: 1px solid $color-shade;
   border-radius: 0.25em;
+  h1 {
+    margin: 0.35em 0 0;
+    line-height: 1.25;
+  }  
+  .icon,
+  h1 {
+    color: $color-primary;
+  }
 }
 
-.card h1 {
-  color: $color-primary; 
-  margin: 0.35em 0 0;
-  line-height: 1.25;
-}
-
-.btn-info {
+.btn {
   color: $white;
   display: inline-block;
-  font-size: 0.85em;
   font-weight: bold;
   text-decoration: none;
   text-transform: uppercase;
   padding: 0.75em 1.5em;
   border-radius: 0.35em;
-  background-color: $color-primary;  
-  margin-top: auto;
+  &-callout {
+    font-size: 1.1em;
+    background-color: $color-secondary;
+  }
+  &-info {
+    font-size: 0.85em;
+    background-color: $color-primary;  
+    margin-top: auto;
+  }
 }
 
 
@@ -118,9 +193,9 @@ footer {
 @media (max-width: 575px) {
   header {
     height: 340px;
-  }
-  header h1 {
-    font-size: 3.4em;
+    h1 {
+      font-size: 3.4em;
+    }
   }
   .img-featured {
     display: none;
@@ -139,9 +214,7 @@ footer {
 
 @media (min-width: 768px) {
   .main-content {
-    width: 90%;
-    max-width: 1000px;
-    margin: 0 auto;
+    @include center;
   }
 }
 
