added content in the mxins

--- a/scss/style.css
+++ b/scss/style.css
@@ -72,8 +72,6 @@ header::after {
   position: absolute;
   -webkit-transform: skewY(-2deg);
           transform: skewY(-2deg);
-  background-color: #eee;
-  top: -25px;
   background-color: #fff;
   bottom: -25px;
 }
@@ -86,7 +84,7 @@ footer {
   position: relative;
 }
 
-footer::before {
+footer::after {
   content: '';
   display: block;
   width: 100%;
@@ -217,7 +215,8 @@ footer::before {
   .main-content {
     width: 90%;
     max-width: 1000px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
