--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,24 +14,30 @@ $color-bg-light: #009fe1;
 $font-stack-primary: 'Raleway', sans-serif;
 $font-stack-secondary: 'Bree Serif', serif;
 
-$max-width:1000px;
+$max-width: 1000px;
+
+// MIXINS ------------------------------------ /
 
 @mixin skewed {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 50px; 
-  position: absolute;
-  transform: skewY(-2deg);
-  background-color: $color-shade;
-  top: -25px;
+  position: relative;
+  &::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 50px; 
+    position: absolute;
+    transform: skewY(-2deg);
+    @content;
+  }
 }
+
 @mixin center {
   width: 90%;
   max-width: $max-width;
-  margin: 0 auto;
-  
+  margin-left: auto;
+  margin-right: auto;
 }
+
 /* BASE ------------------------------------------- */
 
 * {
@@ -77,10 +83,10 @@ a {
 
 header {
   height: 460px;
-  background: linear-gradient($color-bg-light, $color-bg), url('../img/bg.jpg') no-repeat;
+  background: linear-gradient($color-bg-light, $color-bg), 
+              url('../img/bg.jpg') no-repeat;
   background-blend-mode: multiply;
   background-size: cover;
-  position: relative;
   h1 {
     color: $white;
     font-size: 4.8em;
@@ -92,24 +98,23 @@ header {
     font-size: 1.25em;
     margin: 0;
   }
-  &::after {
-    @include skewed;
+  @include skewed {
     background-color: $white;
     bottom: -25px;
-  } 
+  }
 }
-
 
 footer {
   padding: 2em 0 0;
   height: 100px;
   background-color: $color-shade;
   margin-top: 3.5em;
-  position: relative; 
-  &::before {
-    @include skewed;
-  } 
+  @include skewed {
+    background-color: $color-shade;
+    top: -25px;
+  }
 }
+
 
 /* CONTAINERS ------------------------------------- */
 
