--- a/css/style.css
+++ b/css/style.css
@@ -62,7 +62,7 @@ footer {
   background-color: #eee;
   margin-top: 3.5em;
   position: relative; }
-  footer::before {
+  footer::after {
     content: '';
     display: block;
     width: 100%;
@@ -153,7 +153,8 @@ footer {
   .main-content {
     width: 90%;
     max-width: 1000px;
-    margin: 0 auto; } }
+    margin-left: auto;
+    margin-right: auto; } }
 @media (min-width: 992px) {
   header {
     background-position: 0 0, 0 45%; }
