--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,29 @@
-@import './partials/_mixins.scss',
-        './partials/_variables.scss',
-        './partials/helpers',
-        './partials/main-style';
+// ======================================
+//  Partial Imports
+// ======================================
+
+// Utilities
+@import 'utilities/variables',
+        'utilities/mixins',
+        'utilities/functions',
+        'utilities/helpers';
+        
+// Base Styles     
+@import 'base/reset',
+        'base/base';
+
+// Layout Styles
+@import 'layout/containers',
+        'layout/header',
+        'layout/card',
+        'layout/footer';
+
+// Component Styles
+@import 'components/nav',
+        'components/buttons',
+        'components/icons',
+        'components/images';
+
+
+
+
