--- a/scss/style.css
+++ b/scss/style.css
@@ -590,6 +590,7 @@ header p {
   padding: 1.5em 1em;
   border: 1px solid #eee;
   border-radius: 0.25em;
+  margin: 10px;
 }
 
 .card h1 {
@@ -601,8 +602,15 @@ header p {
 @media (min-width: 576px) {
   .card {
     -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
+        -ms-flex: 1 46%;
+            flex: 1 46%;
+  }
+}
+
+@media (min-width: 992px) {
+  .card {
+    -ms-flex-preferred-size: 27.33333%;
+        flex-basis: 27.33333%;
   }
 }
 
