--- a/scss/utilities/_functions.scss
+++ b/scss/utilities/_functions.scss
@@ -2,18 +2,12 @@
 //  Functions
 // ======================================
 
-
-
-// @function divide($a, $b){
-//     @return ($a / $b);
-// }
-
-@function px-to-pc($target, $context: $max-width){
-    @return ($target / $context) * 100;
+@function px-to-pc($target, $context: $max-width) {
+  @return ($target / $context) * 100%;
 }
 
-@function per-line($items){
-    $g-pct: px-to-pc($gutter) * 2;
-    $g-total: $items * $g-pct;
-    @return (100% / $items) - $g-total;
+@function per-line($items) {
+  $g-pct: px-to-pc($gutter) * 2;
+  $g-total: $items * $g-pct;
+  @return (100% / $items) - $g-total;
 }
