--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -3,9 +3,7 @@
 // ======================================
 
 .img-featured {
-  width: 165px;
-  border: 4px solid $white; 
-  border-radius: 50%;
+  @include roundy(165px, 4px solid $white);
   margin-top: 75px;
   position: relative;
   z-index: 100;
