--- a/scss/style.css
+++ b/scss/style.css
@@ -696,6 +696,7 @@ footer::after {
 
 .img-featured {
   width: 165px;
+  height: 165px;
   border: 4px solid #fff;
   border-radius: 50%;
   margin-top: 75px;
