added loop through data in a map with @each

--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -61,7 +61,15 @@
   }  
 }
 
+// Colors
 
+@mixin themes($map) {
+  @each $theme, $color in $map {
+    &-#{$theme} {
+      color: $color;
+    }
+  }
+}
 
 
 
